--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 # MCU Software/.vs
 MCU Software/libraries/ArduinoCore/Debug
 MCU Software/project/Debug
+
+# Proteus 8
+Electronic Board/Project Backups
+Electronic Board/*.workspace
